Fix minor interface bugs

--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -148,6 +148,15 @@
               line-height: 0;
               margin-right: calc(var(--gap) * 3);
             }
+
+            &-search-icon {
+              position: relative;
+              margin-right: 3px;
+
+              img {
+                margin-bottom: -3px;
+              }
+            }
           }
 
           &__input--open {
