--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -6,6 +6,19 @@
     padding: 0;
     height: 60px;
 
+    &__logo {
+        margin-right: 50px;
+    }
+
+    &__mobile-menu {
+        display: flex;
+        align-items: center;
+    }
+
+    &__mobile-icon {
+        display: none;
+    }
+
     &__admin {
         display: flex;
         align-items: center;
@@ -112,7 +125,7 @@
             border: 1px solid rgba(255, 255, 255, 0.5);
             border-radius: 3px;
             padding: 7px;
-            width: 80px;
+            width: 100px;
             text-align: center;
         }
 
@@ -175,6 +188,7 @@
         height: 60px;
         display: flex;
         align-items: center;
+        z-index: 10;
 
         .desktop-switcher-button {
             position: relative;
@@ -208,6 +222,7 @@
             top: 60px;
             list-style: none;
             padding-left: 0;
+            margin-top: 0;
 
             .border {
                 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -257,14 +272,12 @@
             z-index: 1;
             text-align: left;
             width: 300px;
-            top: 40px;
             right: -20px;
             padding: 20px 0;
             flex-direction: row;
 
             .left {
                 width: 50%;
-                border-right: 1px solid #cccccc;
 
                 .header {
                     padding-left: 16px
@@ -272,6 +285,7 @@
             }
             .right {
                 width: 50%;
+                border-left: 1px solid #cccccc;
 
                 .header {
                     padding-left: 30px
@@ -311,6 +325,7 @@
                     padding-left: 20px;
                 }
             }
+
             .current-language, .current-currency, .slash {
                 color: #ffd541;
                 padding: 0 2px;
@@ -318,6 +333,15 @@
 
             .desktop-switcher-button {
                 cursor: pointer;
+
+            }
+        }
+    }
+
+    .language {
+        .desktop-switcher-button {
+            span {
+                color: #ffd541;
             }
         }
     }
@@ -330,8 +354,6 @@
 
         .dropdown-block {
             .assets-menu {
-                top: 45px;
-                left: -70px;
                 padding-left: 0;
                 .assets {
                     height: 80px;
@@ -359,13 +381,11 @@
             }
 
             .language-menu {
-                top: 45px;
                 right: -15px;
             }
         }
         .orders {
             .dropdown-menu {
-                top: 45px;
                 left: 0;
                 padding-left: 0;
             }
@@ -590,108 +610,185 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .pg-navbar {
-        flex-direction: column;
-        margin-top: calc(var(--gap) * 2);
-        justify-content: flex-start;
-        display: flex;
-        height: 100vh;
-        width: 100%;
-        align-items: baseline;
-
+        &__logo {
+            order: 2;
+        }
         &__content {
             order: 1;
-            flex-direction: column;
-            width: 100%;
-            margin: 0;
-            border-bottom: 1px solid var(--placeholder-text);
-
-            &-item {
-                width: 100%;
-                display: block;
-                text-align: center;
-                border-bottom: none;
-                padding: 0;
-                text-align: left;
-                padding-bottom: calc(var(--gap) * 2);
-                padding-left: calc(var(--gap) * 2);
-
-                &--active {
-                    border: none;
-                    color: var(--navbar-text-color);
-                    font-weight: 500;
-                }
-            }
+        }
+        &__right {
+            order: 3;
         }
 
-        &__header {
-            &-settings {
-                margin: 0px 20px 20px;
+        &__logo {
+            margin-right: 0;
+        }
 
-                .btn-group {
-                    display: none;
-                }
+        &__mobile-menu {
+            display: none;
+        }
 
-                &__switcher {
-                    display: block;
-                }
-            }
+        &__mobile-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 60px;
+            height: 60px;
+            position: relative;
+        }
 
-            &-language {
-                position: fixed;
-                bottom: 0;
-                margin-bottom: calc(var(--gap) * 2);
-                display: flex;
-                width: 264px;
-                justify-content: space-between;
+        &__mobile-open {
+            display: flex;
+            position: absolute;
+            top: 60px;
+            width: 65vw;
+            height: calc(100vh - 60px);
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            background-color: #222627;
+            padding-left: 0;
+            padding-top: 0;
+            overflow: auto;
 
-                span {
-                    padding: 0 calc(var(--gap) * 2);
-                }
-
-                .icon {
-                    margin-left: calc(var(--gap) * 2);
-                    height: 12px;
-                }
-
-                .dropdown-menu-language {
-                    right: -50px;
-                    top: -66px;
-                }
-            }
-
-            &-profile {
-                display: flex;
-                flex-direction: column;
-                border-bottom: 1px solid var(--placeholder-text);
-                padding-bottom: calc(var(--gap) * 2);
-                margin-bottom: calc(var(--gap) * 2);
+            .item {
                 width: 100%;
+                height: auto;
+                margin-right: 0;
+                padding: 15px 10px;
+            }
 
-                span {
-                    margin-left: calc(var(--gap) * 2);
-                    font-size: 14px;
-                    color: var(--color-white);
+            .dropdown-block {
+                width: 100%;
+                height: auto;
+                margin-right: 0;
+                padding: 15px 10px;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+
+                .desktop-switcher-button {
+                    margin-bottom: 5px;
+                    justify-content: space-between;
+                    width: 100%;
                 }
 
-                &-logout {
-                    position: absolute;
-                    right: 25px;
-                    top: 3px;
-                    width: 25px;
-                }
+                .dropdown-menu {
+                    position: relative;
+                    width: 100%;
+                    top: 0;
+                    align-items: flex-start;
+                    justify-content: flex-start;
 
-                .pg-navbar__admin-logout {
-                    height: calc(var(--gap) * 3);
-                    span {
-                        font-size: calc(var(--gap) * 2.333);
-                        text-transform: uppercase;
-                        color: var(--navbar-text-color);
+                    li {
+                        padding: 10px 0;
                     }
                 }
             }
+
+            .user.dropdown-block {
+                padding-top: 0;
+                padding-bottom: 0;
+                .desktop-switcher-button {
+                    margin: 0;
+                }
+
+                .dropdown-menu {
+                    li {
+                        width: 100%;
+                    }
+                }
+            }
+
+            .mobile-background {
+                background-color: #000000;
+
+                .dropdown-menu {
+                    background-color: #000000;
+                }
+            }
+
+            .orders { order: 2; }
+            .assets {
+                order: 3;
+
+                .assets-menu {
+                    margin-bottom: 0;
+                    flex-direction: column-reverse;
+                }
+
+                .balance {
+                    .currency {
+                        font-size: 11px;
+                    }
+
+                    .left-cur {
+                        font-size: 14px;
+                        line-height: 34px;
+                    }
+
+                    .type-currency {
+                        font-size: 11px;
+                    }
+                }
+            }
+            .user { order: 4; }
+            .language {
+                order: 1;
+                .language-menu {
+                    padding: 10px 0;
+                    left: 0;
+
+                    .left {
+                        .header {
+                            padding-left: 0;
+                        }
+                    }
+                }
+            }
+            .download {
+                order: 5;
+                width: calc(100% - 20px);
+                padding: 15px 10px;
+                position: relative;
+                bottom: 0;
+                margin: 0 10px 10px;
+                border: 1px solid rgba(255, 255, 255, 0.5);
+                border-radius: 5px;
+            }
+
+            .log-btn {
+                order: 2;
+                width: calc(100% - 20px);
+                margin: 10px;
+                padding: 10px 0;
+                border: 1px solid #ffd541;
+                border-radius: 5px;
+                background-color: #ffd541;
+                color: black;
+                cursor: pointer;
+                height: 43px;
+
+                a {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    span {
+                        color: black;
+                    }
+                }
+            }
+
+            .sign-up {
+                order: 3;
+            }
         }
+
     }
 }
 
