--- a/src/custom/styles/components/Header.pcss
+++ b/src/custom/styles/components/Header.pcss
@@ -7,15 +7,23 @@
   .pg-container {
     padding: 0 15px;
   }
-
-  &__navbar {
-    margin-left: 90px;
-  }
 }
 
-@media screen and (max-width: 768px) {
-  .pg-header {  
+@media screen and (max-width: 800px) {
+  .pg-header {
+
+    .pg-container {
+      padding: 0;
+      height: 60px;
+      max-width: 100%;
+    }
+
+    &__img {
+      width: 100px;
+    }
+
     &__navbar {
+      padding-top: 0;
       margin-left: 0;
     }
   }
