Feature: CE-1880 change font size in mobile

--- a/src/containers/Wallets/EstimatedValue/EstimatedValue.pcss
+++ b/src/containers/Wallets/EstimatedValue/EstimatedValue.pcss
@@ -25,4 +25,11 @@
       }
     }
   }
+
+  @media only screen and (max-device-width: 600px) {
+    .value-container {
+      font-size: 80%;
+    }
+  }
+
 }
