Feature: CE-1881 fix layout for mobile

--- a/src/components/DepositFiat/DepositFiat.pcss
+++ b/src/components/DepositFiat/DepositFiat.pcss
@@ -30,3 +30,10 @@
         }
     }
 }
+
+
+@media only screen and (max-device-width: 600px) {
+    .cr-deposit-fiat-detail__value--sepa {
+        font-size: 75%;
+    }
+}
