--- a/src/components/WalletItem/WalletItem.pcss
+++ b/src/components/WalletItem/WalletItem.pcss
@@ -84,3 +84,15 @@
     }
   }
 }
+
+@media only screen and (max-device-width: 600px) {
+    .cr-wallet-item {
+      &__balance {
+        &-locked,
+        &-amount {
+          font-size: 0.8em !important;
+          font-weight: 400 !important;
+        }
+      }
+    }
+}
