--- a/src/custom/styles/components/WalletItem.pcss
+++ b/src/custom/styles/components/WalletItem.pcss
@@ -33,9 +33,9 @@
       &__balance-locked, &__balance-amount  {
         font-family: var(--font-family);
         font-style: normal;
-        font-weight: bold !important;
-        font-size: 20px !important;
-        line-height: 20px !important;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 20px;
       }
     }
   }
