--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -135,6 +135,14 @@
             }
         }
 
+        .user {
+            .desktop-switcher-button {
+                .icon {
+                    display: flex;
+                }
+            }
+        }
+
         .sign-up {
             border: 1px solid rgba(255, 255, 255, 0.5);
             border-radius: 3px;
