--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -31,6 +31,47 @@
             height: 40px;
             border-radius: 50%;
             margin: 0 12px;
+            position: relative;
+
+            div {
+                height: 25px;
+                width: 22px;
+                background-size: contain;
+                background-repeat: no-repeat;
+                position: absolute;
+                background-position: center center;
+                left: 9px;
+                top: 7px;
+            }
+
+            &--commission {
+                background-image: url(./assets/images/referral-commission-icon.png);
+                top: 9px;
+            }
+
+            &--referrals {
+                background-image: url(./assets/images/referrals-icon.png);
+            }
+
+            &--fee {
+                background-image: url(./assets/images/trade-fee-icon.svg);
+            }
+
+            &--profit {
+                background-image: url(./assets/images/referral-profit-icon.png);
+            }
+
+            &--total-referrals {
+                background-image: url(./assets/images/total-referrals-icon.svg);
+            }
+
+            &--active-referrals {
+                background-image: url(./assets/images/active-referrals-icon.svg);
+            }
+
+            &--active-ratio {
+                background-image: url(./assets/images/active-ration-icon.png);
+            }
         }
 
         &__title {
@@ -78,5 +119,12 @@
             height: 32px;
             line-height: 32px;
         }
+    }
+
+    .copyable-text-field {
+        color: var(--table-text-color);
+        position: relative;
+        z-index: 1;
+        font-size: 12px;
     }
 }
