Fix: update header and footer

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -231,6 +231,11 @@
             }
         }
 
+        .active-menu {
+            display: flex;
+            justify-content: space-between;
+        }
+
         .active-menu > span {
             color: #FFD541;
         }
@@ -356,6 +361,14 @@
             .desktop-switcher-button {
                 cursor: pointer;
 
+            }
+        }
+
+        .currency-menu {
+            .currency-line {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
             }
         }
     }
