--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -687,6 +687,7 @@
             padding-left: 0;
             padding-top: 0;
             overflow: auto;
+            z-index: 10000000;
 
             .item {
                 width: 100%;
